Fix progress bar ie, checkout - correct spacing

--- a/src/customizations/checkout/_checkout.scss
+++ b/src/customizations/checkout/_checkout.scss
@@ -6,6 +6,7 @@
     justify-content: space-between;
     margin-bottom: 3.5rem;
     max-width: 40rem;
+
     @include media('>=phone-lg') {
         max-width: none;
     }
@@ -28,6 +29,10 @@
             right: 0.5rem;
             top: -7rem;
             z-index: 2;
+
+            .ie11 & {
+                top: -6.5rem;
+            }
         }
     }
 
@@ -139,12 +144,12 @@
 
     &__shipping-information-via {
         padding-bottom: 2rem;
-        padding-top: 1rem;
     }
 
     &__step-content {
         padding: 1.5rem 0 2rem;
         max-width: 60rem;
+
         @include media('>=phone-lg') {
             padding: 1.5rem 1rem 2rem 0;
         }
@@ -274,7 +279,6 @@
             border-top: 1px solid $colorAlto;
             padding-top: 2rem;
             padding-bottom: 0.4rem;
-            margin-top: 1rem;
         }
 
         &--details {
